--- a/lect-presenter-api/pom.xml
+++ b/lect-presenter-api/pom.xml
@@ -91,5 +91,11 @@
 			<artifactId>url-detector</artifactId>
 			<version>0.1.23</version>
 		</dependency>
+
+		<dependency>
+			<groupId>me.friwi</groupId>
+			<artifactId>jcefmaven</artifactId>
+			<version>110.0.25.1</version>
+		</dependency>
 	</dependencies>
 </project>
