--- a/lect-web-api/pom.xml
+++ b/lect-web-api/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>dev.onvoid.webrtc</groupId>
 			<artifactId>webrtc-java</artifactId>
-			<version>0.8.0-SNAPSHOT</version>
+			<version>0.8.0</version>
 		</dependency>
 
 		<dependency>
