presenter: use janus-ws endpoint for janus websockets

--- a/lect-presenter-api/src/main/resources/stream.properties
+++ b/lect-presenter-api/src/main/resources/stream.properties
@@ -1,4 +1,4 @@
-stream.janus.websocket.url = wss://{0}:8989
+stream.janus.websocket.url = wss://{0}/janus-ws
 stream.state.websocket.url = wss://{0}/api/v1/publisher/course-state
 stream.message.api.url = wss://{0}/api/v1/publisher/messages
 stream.publisher.api.url = https://{0}
