--- a/lect-presenter-api/pom.xml
+++ b/lect-presenter-api/pom.xml
@@ -74,6 +74,12 @@
             <version>${stylus.version}</version>
         </dependency>
 
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.8.0</version>
+		</dependency>
+
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
