build: update GitHub workflows to use the new windows bundle

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,5 +85,5 @@ jobs:
             target/*.deb
             target/*.rpm
             target/*.pkg
-            target/**/*.msi
+            target/**/*.exe
             target/*.zip
