--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,13 @@ jobs:
           # Import certificate from secrets
           echo -n "$CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
 
+      - name: Set up WiX
+        if: runner.os == 'windows'
+        run: |
+          dotnet tool install --global wix --version 6.0.1
+          wix extension add -g WixToolset.Bal.wixext
+          wix extension add -g WixToolset.UI.wixext
+
       - name: Get version for the current build
         uses: orhun/git-cliff-action@v4
         id: git-cliff
