--- a/lect-packager/lect-msi/pom.xml
+++ b/lect-packager/lect-msi/pom.xml
@@ -34,7 +34,7 @@
 						</goals>
 						<configuration>
 							<target>
-								<exec dir="target" executable="cmd.exe">
+								<exec dir="target" executable="cmd.exe" failonerror="true">
 									<arg value="/c build.bat"/>
 								</exec>
 							</target>
