fix: build workflow to upload only the lectureStudio exe bundle

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,5 +92,5 @@ jobs:
             target/*.deb
             target/*.rpm
             target/*.pkg
-            target/**/*.exe
+            target/*.exe
             target/*.zip
