--- a/lect-media/pom.xml
+++ b/lect-media/pom.xml
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>dev.onvoid.webrtc</groupId>
 			<artifactId>webrtc-java</artifactId>
-			<version>0.13.0-SNAPSHOT</version>
+			<version>0.13.0</version>
 		</dependency>
 
 		<dependency>
