--- a/.github/workflows/build-mupdf-java.yml
+++ b/.github/workflows/build-mupdf-java.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         platform:
           - name: macos-x86_64
-            runs-on: macos-13
+            runs-on: macos-15-intel
           - name: macos-arm64
             runs-on: macos-14
           - name: linux-x86_64
