--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,7 +99,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-13, macos-14, ubuntu-22.04, windows-2022]
+        os: [macos-15-intel, macos-14, ubuntu-22.04, windows-2022]
         java: [21]
 
     steps:
