fix: add fuse dependency to Java installation in release workflow for Linux

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,7 +127,7 @@ jobs:
         if: runner.os == 'linux'
         run: |
           sudo apt update
-          sudo apt install -y openjdk-21-jdk
+          sudo apt install -y openjdk-21-jdk fuse
           echo "JAVA_HOME=/usr/lib/jvm/java-21-openjdk-amd64" >> $GITHUB_ENV
           echo "PATH=/usr/lib/jvm/java-21-openjdk-amd64/bin:$PATH" >> $GITHUB_ENV
 
